@@ -37,8 +37,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
 
     // Testcontainers
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
+    testImplementation 'org.testcontainers:postgresql:1.20.4'
 
     // Mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -74,4 +74,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
 }
